--- a/Client/src/pages/LoginForm/LoginForm.css
+++ b/Client/src/pages/LoginForm/LoginForm.css
@@ -63,6 +63,7 @@
   padding-right: 10px;
   transition: 0.3s;
   background-color: #fff;
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
 .login-content input:focus {
