--- a/Client/src/pages/RegistrationForm/RegistrationForm.css
+++ b/Client/src/pages/RegistrationForm/RegistrationForm.css
@@ -4,7 +4,9 @@
   font-family: "Roboto Condensed", serif;
   font-weight: 400;
 }
-
+.input_text {
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
 .singup {
   height: 83vh;
   display: flex;
