--- a/Client/src/features/SearchYourPatients/css/SearchMenu.css
+++ b/Client/src/features/SearchYourPatients/css/SearchMenu.css
@@ -23,6 +23,11 @@
     padding: 15px;
   }
 
+  input:focus {
+    outline: none;
+    border: none;
+  }
+
   button {
     background: 0;
     border: 0;
