--- a/Client/src/features/FromDoctorRequests/css/FilterableParentMenu.css
+++ b/Client/src/features/FromDoctorRequests/css/FilterableParentMenu.css
@@ -36,6 +36,7 @@
   padding: 10px;
   min-width: 80%;
   height: 118px;
+  padding: 20px 30px 10px 30px;
 
   input {
     height: 45%;
@@ -51,5 +52,10 @@
     margin-bottom: 10px;
     font-family: Rubik;
     padding: 10px;
+  }
+
+  input:focus {
+    outline: none;
+    border: none;
   }
 }
