--- a/Client/src/features/FromDoctorRequests/css/Patient.css
+++ b/Client/src/features/FromDoctorRequests/css/Patient.css
@@ -27,7 +27,6 @@
 
   .patient-info {
     width: 80%;
-    margin-bottom: 25px;
   }
 
   h3 {
@@ -44,6 +43,10 @@
     top: 25px;
     right: 30px;
   }
+}
+
+.patient:hover {
+  cursor: pointer;
 }
 
 .patient.waiting {
