--- a/Client/src/features/MedicalRecord/css/AddNote.css
+++ b/Client/src/features/MedicalRecord/css/AddNote.css
@@ -18,7 +18,7 @@
 
   .labes-box {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     margin-bottom: 20px;
   }
 
@@ -42,7 +42,7 @@
     margin-top: 20px;
     display: flex;
     align-items: center;
-    gap: 2px;
+    gap: 7px;
   }
 
   input[type="radio"] {
@@ -104,7 +104,7 @@
     color: #000;
   }
 
-  .save-button {
+  button {
     margin-top: 20px;
 
     display: flex;
@@ -119,10 +119,10 @@
     font-weight: 400;
     line-height: 21.33px;
   }
-  .save-button:active {
+  button:active {
     transform: scale(0.95);
   }
-  .save-button:hover {
+  button:hover {
     cursor: pointer;
   }
 }
