--- a/Client/src/features/MedicalRecord/css/MedicalRecordFilter.css
+++ b/Client/src/features/MedicalRecord/css/MedicalRecordFilter.css
@@ -23,8 +23,8 @@
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: flex-start;
-  gap: 5px;
+  align-items: center;
+  gap: 7px;
   font-size: 24px;
   font-weight: 400;
   line-height: 28.44px;
