--- a/Client/src/features/MedicalRecord/css/Note.css
+++ b/Client/src/features/MedicalRecord/css/Note.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
   /* padding: 35px 25px; */
 
@@ -53,6 +53,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    text-align: left;
   }
 
   .text {
@@ -87,4 +88,8 @@
 
 .note.expanded {
   min-height: 320px;
+}
+
+.note:hover {
+  cursor: pointer;
 }
