--- a/Client/src/pages/LoginForm/LoginForm.css
+++ b/Client/src/pages/LoginForm/LoginForm.css
@@ -3,14 +3,12 @@
   padding: 0;
   font-weight: 400;
 }
-
 .login {
   height: 83vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
 }
 
 .login-content {
@@ -141,5 +139,15 @@
   }
   100% {
     box-shadow: 0 0 25px rgba(255, 255, 255, 0.5);
+  }
+}
+
+@media (max-width: 600px) {
+  * {
+    width: 100%;
+  }
+  .login-content {
+    margin-top: -40%;
+    width: 90%;
   }
 }
