--- a/Client/src/pages/LoginRegistration/App.css
+++ b/Client/src/pages/LoginRegistration/App.css
@@ -6,10 +6,16 @@ textarea {
   display: flex;
   flex-direction: column;
   height: 50%;
-  align-items: center;
 }
 .login-registration-bottom {
-  width: 989px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+@media (max-width: 600px) {
+  .login-registration-bottom {
+    flex-direction: column-reverse;
+    row-gap: 10px;
+  }
 }
