--- a/Client/src/pages/RegistrationForm/RegistrationForm.css
+++ b/Client/src/pages/RegistrationForm/RegistrationForm.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  /* font-family: "Roboto Condensed", serif; */
+  font-family: "Roboto Condensed", serif;
   font-weight: 400;
 }
 .input_text {
@@ -23,9 +23,6 @@
   padding: 20px;
   box-sizing: border-box;
   background: #adc4f7;
-  top: 204px;
-  left: 136px;
-  gap: 0px;
   border-radius: 30px;
   opacity: 0px;
   width: 989px;
@@ -137,9 +134,7 @@
   box-shadow: 0px 0px 25px 0px rgba(255, 255, 255, 0.5);
   transition: 0.3s;
 }
-.registration-button {
-  width: 130px;
-}
+
 .checkbox-container-right button:hover {
   background-color: rgba(255, 255, 255, 0.645);
   animation: breathing 2s infinite ease-in-out;
@@ -159,4 +154,61 @@
 .checkbox-container-left label {
   margin-right: 10px;
   font-size: 22px;
+}
+
+@media (max-width: 600px) {
+  .singup-content {
+    margin-top: -20%;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+  }
+  .singup-content-text {
+    text-align: right;
+    font-size: 20px;
+    justify-content: center;
+  }
+  .singup-content-left-mobile-notactive {
+    display: none;
+  }
+  .singup-content-right {
+    display: none;
+  }
+  .singup-content-right-mobile-active {
+    display: flex;
+  }
+  .singup-content-left input,
+  .singup-content-right input {
+    width: 100%;
+    height: 50px;
+  }
+
+  .checkbox-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .checkbox-container-left {
+    margin-top: 5%;
+    font-size: 16px;
+    text-align: start;
+  }
+
+  .checkbox-container-right {
+    margin-top: 10px;
+  }
+  .checkbox-container-right button {
+    font-size: 14px;
+  }
+  .old-button {
+    margin-top: 5%;
+  }
+  .new-button {
+    width: 40%;
+    height: 60%;
+    margin-top: 20%;
+  }
+  .dont-show {
+    display: none;
+  }
 }
