--- a/Client/src/features/HeaderRegLogin/Header.css
+++ b/Client/src/features/HeaderRegLogin/Header.css
@@ -71,14 +71,16 @@
     width: 50%;
     text-align: left;
   }
+
   .image {
-    width: 70px;
-    height: 70px;
     right: 5%;
+  }
+  .image img {
+    width: 50px;
+    height: 50px;
   }
   .header {
     display: flex;
-    align-items: center;
     align-self: center;
     flex-direction: column;
     justify-content: space-between;
@@ -99,6 +101,6 @@
   }
   .header-text {
     text-align: left;
-    font-size: 24px;
+    font-size: 18px;
   }
 }
