--- a/Client/src/pages/LoginForm/LoginForm.css
+++ b/Client/src/pages/LoginForm/LoginForm.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
 }
 
 .login-content {
@@ -142,11 +143,14 @@
 }
 
 @media (max-width: 600px) {
-  * {
-    width: 100%;
-  }
   .login-content {
-    margin-top: -40%;
+    margin-top: -20%;
     width: 90%;
+  }
+}
+
+@media (max-height: 667px) {
+  .login-content {
+    margin-top: 0;
   }
 }
