--- a/Client/src/features/FromDoctor/css/DoctorCard.css
+++ b/Client/src/features/FromDoctor/css/DoctorCard.css
@@ -1,8 +1,6 @@
 .doctor-card {
   background-color: #bcd9ff;
   width: 50%;
-  padding: 35px;
-  padding-bottom: 80px;
   border-radius: 30px;
   display: flex;
   flex-direction: column;
@@ -21,6 +19,7 @@
 
   .text-container {
     max-width: 500px;
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -48,20 +47,21 @@
   }
 
   .extra-info {
-    max-height: 0;
-    overflow: hidden;
     transition: max-height 0.3s ease-in-out;
     color: #555;
     top: 10px;
   }
 
   .extra-info.show {
+    padding-top: 15px;
     max-height: 100px;
-    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 }
 .doctor-card.expanded {
-  max-height: 480px;
+  max-height: 430px;
 }
 .doctor-card:hover {
   cursor: pointer;
