--- a/Client/src/features/FromDoctorRequests/css/FilterMenu.css
+++ b/Client/src/features/FromDoctorRequests/css/FilterMenu.css
@@ -8,7 +8,7 @@
   align-items: flex-start;
   justify-content: center;
   border: 1px solid #2d2d2d;
-  width: 20%;
+  width: fit-content;
   padding: 15px;
   gap: 10px;
 
