--- a/Client/src/features/MedicalRecord/css/AddNote.css
+++ b/Client/src/features/MedicalRecord/css/AddNote.css
@@ -1,13 +1,19 @@
 .add-note {
   width: 100%;
+  min-width: fit-content;
+  min-height: fit-content;
   border-radius: 20px;
   opacity: 0px;
   background-color: #bcd9ff;
+  padding: 15px;
 
   .select-and-submit {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
     width: 90%;
+    margin-bottom: 20px;
   }
 
   .add-note-box {
@@ -112,8 +118,8 @@
 
     display: flex;
     align-items: center;
+    justify-content: center;
 
-    padding: 30px 50px;
     border-radius: 30px;
     border: 0;
     background-color: white;
@@ -121,6 +127,9 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 21.33px;
+
+    width: 200px;
+    height: 60px;
   }
   button:active {
     transform: scale(0.95);
