--- a/Client/src/features/MedicalRecord/css/MedicalRecordFilter.css
+++ b/Client/src/features/MedicalRecord/css/MedicalRecordFilter.css
@@ -1,6 +1,6 @@
 .medical-record-filter {
-  width: 35%;
-  max-width: 530px;
+  width: fit-content;
+  min-width: 500px;
   border-radius: 20px;
   border: 0;
   background-color: #bcd9ff;
