--- a/Client/src/features/MedicalRecord/css/Note.css
+++ b/Client/src/features/MedicalRecord/css/Note.css
@@ -1,14 +1,17 @@
 .note {
   width: 100%;
+  min-width: 700px;
   margin: 0;
   background-color: #bcd9ff;
-  max-height: 150px;
+
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   gap: 40px;
   justify-content: center;
   position: relative;
+
+  padding: 15px;
 
   .note-box {
     padding: 35px 35px;
@@ -54,9 +57,13 @@
     justify-content: flex-start;
     text-align: left;
   }
+  toggle-layer {
+    display: flex;
+    justify-content: center;
+  }
 
   .text {
-    margin-top: 20px;
+    margin: 20px 0;
     width: 85%;
     border-radius: 20px;
     padding: 15px;
@@ -77,6 +84,7 @@
     align-items: flex-end;
     justify-content: flex-end;
     bottom: 15px;
+    right: 5px;
     right: 35px;
   }
   .expand-button.expanded {
