--- a/Client/src/features/PatientsAccount/css/SendRequest.css
+++ b/Client/src/features/PatientsAccount/css/SendRequest.css
@@ -77,7 +77,7 @@
       gap: 10px;
     }
 
-    input[type="checkbox"] {
+    input[type="radio"] {
       appearance: none; /* Убираем стандартный стиль */
       -webkit-appearance: none; /* Для Safari */
       -moz-appearance: none; /* Для Firefox */
@@ -93,12 +93,12 @@
       transition: background-color 0.2s, border-color 0.2s;
     }
 
-    input[type="checkbox"]:checked {
+    input[type="radio"]:checked {
       background-color: #c1c1c1;
       border-color: #c1c1c1;
     }
 
-    input[type="checkbox"]:checked::after {
+    input[type="radio"]:checked::after {
       content: "✔";
       color: white;
       font-size: 14px;
