--- a/Client/src/pages/FromDoctorRequests/index.css
+++ b/Client/src/pages/FromDoctorRequests/index.css
@@ -19,7 +19,11 @@
   }
   .logo {
     position: absolute;
-    right: 5px;
     top: 5px;
+    right: 5px;
+    width: 15%;
+    height: 15%;
+    max-width: 160px;
+    max-height: 160px;
   }
 }
