--- a/Client/src/pages/MedicalRecord/index.css
+++ b/Client/src/pages/MedicalRecord/index.css
@@ -31,6 +31,7 @@
 
   .medical-record-menu {
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-end;
     gap: 20px;
   }
@@ -47,6 +48,10 @@
     position: absolute;
     top: 5px;
     right: 5px;
+    width: 15%;
+    height: 15%;
+    max-width: 160px;
+    max-height: 160px;
   }
 
   h2 {
