--- a/Client/src/pages/PatientsAccount/index.css
+++ b/Client/src/pages/PatientsAccount/index.css
@@ -11,8 +11,12 @@
 
   .logo {
     position: absolute;
-    right: 5px;
     top: 5px;
+    right: 5px;
+    width: 15%;
+    height: 15%;
+    max-width: 160px;
+    max-height: 160px;
   }
   .avatar {
     width: 40%;
