--- a/Client/src/pages/SearchPatients/index.css
+++ b/Client/src/pages/SearchPatients/index.css
@@ -10,8 +10,12 @@
 
   .logo {
     position: absolute;
-    right: 5px;
     top: 5px;
+    right: 5px;
+    width: 15%;
+    height: 15%;
+    max-width: 160px;
+    max-height: 160px;
   }
 
   h2 {
