--- a/Client/src/features/FromDoctor/css/DoctorCard.css
+++ b/Client/src/features/FromDoctor/css/DoctorCard.css
@@ -1,6 +1,5 @@
 .doctor-card {
   background-color: #bcd9ff;
-  width: 50%;
   border-radius: 30px;
   display: flex;
   flex-direction: column;
@@ -10,22 +9,50 @@
   overflow: hidden;
   transition: max-height 0.3s ease-in-out;
   max-height: 340px;
+  order: 1;
+
+  @media (max-width: 600px) {
+    width: 85%;
+
+    p {
+      font-size: 16px;
+    }
+
+    h4 {
+      font-size: 24px;
+    }
+    .text-container {
+      padding: 20px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    width: 50%;
+
+    p {
+      font-size: 28px;
+    }
+    h4 {
+      font-size: 40px;
+    }
+
+    .text-container {
+      max-width: 500px;
+      padding: 40px 20px 100px 20px;
+    }
+  }
 
   p {
-    font-size: 28px;
     color: #3b3b3b;
     margin: 0;
   }
 
   .text-container {
-    max-width: 500px;
-    padding-top: 40px;
     display: flex;
     flex-direction: column;
     gap: 20px;
 
     h4 {
-      font-size: 40px;
       font-weight: 400;
       margin: 0;
     }
@@ -62,6 +89,7 @@
 }
 .doctor-card.expanded {
   max-height: 430px;
+  padding-bottom: 20px;
 }
 .doctor-card:hover {
   cursor: pointer;
