--- a/Client/src/features/FromDoctor/css/Patients.css
+++ b/Client/src/features/FromDoctor/css/Patients.css
@@ -1,13 +1,32 @@
 .patients {
   background-color: #bcd9ff;
-  width: 40%;
   display: flex;
   justify-content: space-between;
-  padding: 25px;
-  padding-bottom: 250px;
   border-radius: 30px;
-
+  order: 4;
   position: relative;
+
+  @media (max-width: 600px) {
+    width: 85%;
+    .patients-text-container {
+      padding: 20px;
+      min-height: 180px;
+    }
+
+    p {
+      font-size: 26px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    width: 40%;
+    padding: 25px;
+    padding-bottom: 250px;
+
+    p {
+      font-size: 30px;
+    }
+  }
 
   button {
     background: 0;
@@ -20,7 +39,6 @@
 
   p {
     color: #141414;
-    font-size: 30px;
     font-weight: 400;
     line-height: 35.55px;
   }
