--- a/Client/src/features/FromDoctor/css/Toggle.css
+++ b/Client/src/features/FromDoctor/css/Toggle.css
@@ -5,4 +5,18 @@
     background: 0;
     border: 0;
   }
+
+  @media (max-width: 600px) {
+    svg {
+      width: 12px;
+      height: 10px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    svg {
+      width: 24px;
+      height: 17px;
+    }
+  }
 }
