--- a/Client/src/pages/FromDoctorRequests/index.css
+++ b/Client/src/pages/FromDoctorRequests/index.css
@@ -1,17 +1,47 @@
 .from-doctor-requests {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   justify-content: space-between;
   gap: 40px;
   font-family: Rubik;
   text-align: left;
-  width: 83%;
-  margin: 5% 0 0 11%;
+
+  @media (max-width: 600px) {
+    width: 85%;
+    align-items: center;
+    margin: 100px 7.5%;
+    logo {
+      svg {
+        width: 10%;
+        height: 10%;
+      }
+    }
+
+    h2 {
+      font-size: 26px;
+      margin-left: 7.5%;
+    }
+  }
+
+  @media (min-width: 600px) {
+    align-items: flex-start;
+
+    width: 83%;
+    margin: 5% 0 0 11%;
+    logo {
+      svg {
+        width: 160px;
+        height: 160px;
+      }
+    }
+
+    h2 {
+      font-size: 48px;
+    }
+  }
 
   h2 {
     color: #141414;
-    font-size: 48px;
     font-weight: 400;
     line-height: 56.88px;
     margin-bottom: -10px;
@@ -21,9 +51,5 @@
     position: absolute;
     top: 5px;
     right: 5px;
-    width: 15%;
-    height: 15%;
-    max-width: 160px;
-    max-height: 160px;
   }
 }
