--- a/Client/src/features/FromDoctor/css/DoctorCard.css
+++ b/Client/src/features/FromDoctor/css/DoctorCard.css
@@ -6,23 +6,29 @@
   justify-content: space-between;
   text-align: left;
   position: relative;
-  overflow: hidden;
   transition: max-height 0.3s ease-in-out;
   max-height: 340px;
   order: 1;
 
   @media (max-width: 600px) {
-    width: 85%;
+    min-width: fit-content;
 
+    width: 100%;
     p {
       font-size: 16px;
     }
 
     h4 {
       font-size: 24px;
+      margin-bottom: 10px;
     }
     .text-container {
       padding: 20px;
+      gap: 5px;
+    }
+    .extra-info {
+      padding-top: 15px;
+      gap: 5px;
     }
   }
 
@@ -39,22 +45,25 @@
     .text-container {
       max-width: 500px;
       padding: 40px 20px 100px 20px;
+      gap: 20px;
+    }
+
+    .extra-info.show {
+      padding-top: 15px;
+      gap: 20px;
     }
   }
 
   p {
     color: #3b3b3b;
-    margin: 0;
   }
 
   .text-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
 
     h4 {
       font-weight: 400;
-      margin: 0;
     }
   }
   .toggle-button {
@@ -80,16 +89,16 @@
   }
 
   .extra-info.show {
-    padding-top: 15px;
     max-height: 100px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
   }
 }
 .doctor-card.expanded {
   max-height: 430px;
-  padding-bottom: 20px;
+  @media (min-height: 600px) {
+    padding-bottom: 40px;
+  }
 }
 .doctor-card:hover {
   cursor: pointer;
