--- a/Client/src/features/FromDoctor/css/Patients.css
+++ b/Client/src/features/FromDoctor/css/Patients.css
@@ -7,7 +7,8 @@
   position: relative;
 
   @media (max-width: 600px) {
-    width: 85%;
+    min-width: fit-content;
+    width: 100%;
     .patients-text-container {
       padding: 20px;
       min-height: 180px;
@@ -15,6 +16,7 @@
 
     p {
       font-size: 26px;
+      line-height: 30.81px;
     }
   }
 
@@ -25,6 +27,7 @@
 
     p {
       font-size: 30px;
+      line-height: 35.55px;
     }
   }
 
@@ -40,7 +43,6 @@
   p {
     color: #141414;
     font-weight: 400;
-    line-height: 35.55px;
   }
 }
 
