--- a/Client/src/features/FromDoctorRequests/css/FilterMenu.css
+++ b/Client/src/features/FromDoctorRequests/css/FilterMenu.css
@@ -3,19 +3,56 @@
   border-radius: 20px;
   color: #2d2d2d;
   background-color: #bcd9ff;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  border: 1px solid #2d2d2d;
   width: fit-content;
-  padding: 15px;
-  gap: 10px;
+
+  @media (max-width: 600px) {
+    padding: 0;
+    border: 0;
+    width: 100%;
+    .filter-menu-inner-container {
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    label {
+      font-size: 16px;
+      line-height: 18.96px;
+    }
+
+    input[type="checkbox"] {
+      width: 17px;
+      height: 17px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    width: fit-content;
+    border: 1px solid #2d2d2d;
+    .filter-menu-inner-container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      gap: 10px;
+      padding: 15px;
+    }
+
+    label {
+      font-size: 18px;
+      line-height: 21.33px;
+    }
+
+    input[type="checkbox"] {
+      width: 20px;
+      height: 20px;
+    }
+  }
 
   label {
-    font-size: 18px;
     font-weight: 400;
-    line-height: 21.33px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -23,14 +60,13 @@
   }
 
   input[type="checkbox"] {
+    padding: 0;
     appearance: none; /* Убираем стандартный стиль */
     -webkit-appearance: none; /* Для Safari */
     -moz-appearance: none; /* Для Firefox */
     background-color: white;
     border: 1px solid white;
     border-radius: 5px;
-    width: 20px;
-    height: 20px;
     cursor: pointer;
     display: inline-block;
     position: relative;
