--- a/Client/src/features/FromPatient/css/PatientCard.css
+++ b/Client/src/features/FromPatient/css/PatientCard.css
@@ -1,35 +1,34 @@
-.patient-card {
-    background-color: #bcd9ff;
-    width: 50%;
-    padding: 25px;
-    padding-bottom: 100px;
-    border-radius: 30px;
+.from-patient-patient-card {
+  background-color: #bcd9ff;
+  width: 50%;
+  padding: 25px;
+  padding-bottom: 100px;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: left;
+  position: relative;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+  max-height: 340px;
+
+  p {
+    font-size: 28px;
+    color: #3b3b3b;
+    margin: 0;
+  }
+
+  .text-container {
+    max-width: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    text-align: left;
-    position: relative;
-    overflow: hidden;
-    transition: max-height 0.3s ease-in-out;
-    max-height: 340px;
-  
-    p {
-      font-size: 28px;
-      color: #3b3b3b;
+    gap: 20px;
+
+    h4 {
+      font-size: 40px;
+      font-weight: 400;
       margin: 0;
     }
-  
-    .text-container {
-      max-width: 500px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-  
-      h4 {
-        font-size: 40px;
-        font-weight: 400;
-        margin: 0;
-      }
-    }
+  }
 }
-  
