--- a/Client/src/features/PatientsAccount/css/MedCardHistory.css
+++ b/Client/src/features/PatientsAccount/css/MedCardHistory.css
@@ -1,25 +1,51 @@
 .med-card-history {
   position: relative;
-  width: 36%;
-  max-height: 300px;
-  padding: 40px 20px 225px 40px;
-  gap: 0px;
   border-radius: 30px;
   opacity: 0px;
-  font-size: 30px;
   font-weight: 400;
-  line-height: 35.55px;
   text-align: left;
-  padding-left: 25px;
-  margin-right: 20px;
+
+  @media (max-width: 600px) {
+    min-width: fit-content;
+    width: 85%;
+
+    button {
+      bottom: 15px;
+      right: 15px;
+    }
+    .med-card-inner-container {
+      padding: 20px;
+      height: 130px;
+    }
+
+    p {
+      font-size: 24px;
+      line-height: 28.44px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    order: 3;
+    width: 36%;
+    max-height: 300px;
+    padding: 40px 20px 225px 40px;
+    gap: 0px;
+    font-size: 30px;
+    line-height: 35.55px;
+    padding-left: 25px;
+    margin-right: 20px;
+
+    button {
+      bottom: 25px;
+      right: 25px;
+    }
+  }
 
   button {
     background: 0;
     border: 0;
     transform: rotate(-90deg);
     position: absolute;
-    bottom: 25px;
-    right: 25px;
   }
 }
 
