--- a/Client/src/features/SearchYourPatients/css/SearchMenu.css
+++ b/Client/src/features/SearchYourPatients/css/SearchMenu.css
@@ -1,26 +1,47 @@
 .search-menu {
   background-color: #bcd9ff;
-  max-height: 118px;
   gap: 0px;
   border-radius: 20px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 20px 15px 15px 15px;
-  width: 60%;
 
+  @media (max-width: 600px) {
+    height: 50px;
+    width: 100%;
+
+    input {
+      margin-left: 5px;
+      width: 80%;
+      height: 30px;
+      border-radius: 20px;
+      border: 1px;
+      opacity: 0px;
+      font-size: 12px;
+      line-height: 20px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    padding: 20px 15px 15px 15px;
+    width: 60%;
+    max-height: 118px;
+
+    input {
+      width: 80%;
+      height: 70%;
+      font-size: 32px;
+      line-height: 37.92px;
+      margin-bottom: 10px;
+      padding: 15px;
+    }
+  }
   input {
-    width: 80%;
-    height: 70%;
     border-radius: 20px;
     border: 1px;
     opacity: 0px;
-    font-size: 32px;
-    line-height: 37.92px;
     font-weight: 400;
     color: #2f2f2f;
-    margin-bottom: 10px;
-    padding: 15px;
   }
 
   input:focus {
