--- a/Client/src/pages/PatientsAccount/index.css
+++ b/Client/src/pages/PatientsAccount/index.css
@@ -3,20 +3,27 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: row;
-  width: 95%;
-  margin: 5% 0 0 11%;
-  gap: 40px;
+  width: 100%;
+
+  @media (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 100px;
+  }
+
+  @media (min-width: 600px) {
+    width: 89%;
+    margin: 5% 0 0 11%;
+    gap: 40px;
+    flex-direction: row;
+    align-items: flex-start;
+  }
 
   .logo {
     position: absolute;
     top: 5px;
     right: 5px;
-    width: 15%;
-    height: 15%;
-    max-width: 160px;
-    max-height: 160px;
   }
   .avatar {
     width: 40%;
