--- a/Client/src/pages/SearchPatients/index.css
+++ b/Client/src/pages/SearchPatients/index.css
@@ -3,26 +3,31 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 30px;
   text-align: left;
-  width: 83%;
-  margin: 2% 0 0 11%;
+
+  @media (max-width: 600px) {
+    margin: 100px 7%;
+    gap: 20px;
+  }
+
+  @media (min-width: 600px) {
+    gap: 30px;
+    width: 83%;
+    margin: 2% 0 0 11%;
+    h2 {
+      font-size: 48px;
+      line-height: 56.88px;
+    }
+  }
+  h2 {
+    font-family: Rubik;
+    width: 100%;
+    font-weight: 400;
+  }
 
   .logo {
     position: absolute;
     top: 5px;
     right: 5px;
-    width: 15%;
-    height: 15%;
-    max-width: 160px;
-    max-height: 160px;
-  }
-
-  h2 {
-    font-family: Rubik;
-    width: 100%;
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 56.88px;
   }
 }
