--- a/Client/src/features/FromDoctorRequests/css/FilterableParentMenu.css
+++ b/Client/src/features/FromDoctorRequests/css/FilterableParentMenu.css
@@ -2,17 +2,17 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 30px;
   margin: 0 auto;
   padding: 0;
 
   @media (max-width: 600px) {
-    width: 85%;
+    width: 100%;
     min-width: fit-content;
 
     .menu {
       display: flex;
       flex-direction: column;
+      margin-bottom: 30px;
     }
 
     p {
@@ -38,6 +38,8 @@
   }
 
   @media (min-width: 600px) {
+    gap: 30px;
+
     width: 100%;
     p {
       font-size: 28px;
