--- a/Client/src/features/FromDoctorRequests/css/Patient.css
+++ b/Client/src/features/FromDoctorRequests/css/Patient.css
@@ -1,5 +1,4 @@
 .patient {
-  border-radius: 30px;
   display: flex;
   justify-content: flex-start;
   text-align: left;
@@ -7,12 +6,21 @@
   border-color: black;
 
   @media (max-width: 600px) {
-    height: 70px;
-    padding: 20px 10px 0px 10px;
+    border-radius: 20px;
+    height: 88px;
     align-items: flex-start;
-    gap: 10px;
     width: 100%;
     min-width: fit-content;
+
+    .requests-patient-inner-box {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      text-align: left;
+      gap: 10px;
+
+      padding: 20px 10px;
+    }
 
     .date-of-birth {
       display: none;
@@ -49,6 +57,8 @@
   }
 
   @media (min-width: 600px) {
+    border-radius: 30px;
+
     height: 130px;
     width: 100%;
     padding: 20px;
