--- a/Client/src/features/FromDoctorRequests/css/PatientList.css
+++ b/Client/src/features/FromDoctorRequests/css/PatientList.css
@@ -3,5 +3,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 25px;
+  @media (max-width: 600px) {
+    gap: 15px;
+  }
+  @media (min-width: 600px) {
+    gap: 25px;
+  }
 }
