--- a/Client/src/features/MedicalRecord/css/AddNote.css
+++ b/Client/src/features/MedicalRecord/css/AddNote.css
@@ -5,51 +5,172 @@
   border-radius: 20px;
   opacity: 0px;
   background-color: #bcd9ff;
-  padding: 15px;
 
-  .select-and-submit {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 90%;
-    margin-bottom: 20px;
+  @media (max-width: 600px) {
+    h3 {
+      font-size: 16px;
+      line-height: 18.96px;
+    }
+    .add-note-box {
+      padding: 20px 18px 20px 15px;
+      display: flex;
+    }
+
+    .labels-box {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+      column-gap: 10px;
+    }
+    input[type="radio"] {
+      width: 17px;
+      height: 17px;
+    }
+    label {
+      margin-top: 10px;
+      font-size: 14px;
+      line-height: 16.59px;
+      gap: 5px;
+      min-width: fit-content;
+      flex: 0 0 calc(49% - 10px); /* Занимает половину ширины родителя с учетом gap */
+    }
+
+    .select-and-submit {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    .add-note-form {
+      width: 100%;
+    }
+
+    button {
+      border-radius: 30px;
+      border: 0;
+      background-color: white;
+      font-size: 12px;
+      line-height: 14.22px;
+
+      width: 128px;
+      height: 30px;
+    }
+
+    button.desktop {
+      display: none;
+    }
+    .input-text {
+      width: 90%;
+      padding: 10px;
+    }
+    textarea::placeholder {
+      font-size: 12px;
+      line-height: 14.22px;
+    }
+    h4 {
+      margin-bottom: 10px;
+    }
+    button.mobile {
+      margin-top: 10px;
+    }
+    .add-note-two-buttons {
+      display: flex;
+      gap: 30px;
+    }
   }
 
-  .add-note-box {
-    padding: 25px 40px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
+  @media (min-width: 600px) {
+    h3 {
+      font-size: 26px;
+      line-height: 30.81px;
+    }
 
-  .labes-box {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
+    .labels-box {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+      width: 100%;
+    }
+    .add-note-box {
+      position: relative;
+      padding: 25px 40px 20px 20px;
+      display: flex;
+      justify-content: flex-start;
+      width: 100%;
+    }
+    form.add-note-form {
+      width: 97%;
+      padding: 0;
+    }
+    .select-and-submit {
+      width: 95%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      gap: 30px;
+    }
+    label {
+      margin-top: 20px;
+      gap: 7px;
+    }
+    input[type="radio"] {
+      width: 20px;
+      height: 20px;
+    }
+    .add-note-two-buttons {
+      right: 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .select-box {
+      display: flex;
+      flex-direction: column;
+    }
+
+    button {
+      display: flex;
+      font-size: 18px;
+      line-height: 21.33px;
+      align-items: flex-start;
+      height: 60px;
+      width: 200px;
+    }
+
+    button.mobile {
+      display: none;
+    }
+    .input-text {
+      padding: 20px;
+      padding-bottom: 70px;
+      width: 90%;
+    }
+    textarea::placeholder {
+      font-size: 18px;
+      line-height: 21.33px;
+    }
+    h4 {
+      margin-bottom: 20px;
+    }
   }
 
   h3 {
     text-align: left;
     margin: 0;
-    font-size: 26px;
     font-weight: 400;
-    line-height: 30.81px;
   }
 
   h4 {
-    font-size: 22px;
     font-weight: 400;
-    line-height: 26.07px;
     text-align: left;
-    margin-bottom: 20px;
   }
 
   label {
-    margin-top: 20px;
     display: flex;
-    align-items: center;
-    gap: 7px;
+    align-items: flex-start;
+    justify-content: flex-start;
   }
 
   input[type="radio"] {
@@ -59,8 +180,6 @@
     background-color: white;
     border: 1px solid white;
     border-radius: 5px;
-    width: 20px;
-    height: 20px;
     cursor: pointer;
     display: inline-block;
     position: relative;
@@ -83,7 +202,6 @@
     transform: translate(-50%, -50%);
   }
   .add-note-form {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -94,10 +212,7 @@
     margin: 0;
     border-radius: 20px;
     border: 0;
-    padding: 20px;
     resize: none;
-    padding-bottom: 70px;
-    width: 90%;
     outline: 0;
     box-shadow: none;
   }
@@ -107,15 +222,11 @@
   }
 
   textarea::placeholder {
-    font-size: 18px;
     font-weight: 400;
-    line-height: 21.33px;
     color: #000;
   }
 
   button {
-    margin-top: 20px;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -123,13 +234,6 @@
     border-radius: 30px;
     border: 0;
     background-color: white;
-
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21.33px;
-
-    width: 200px;
-    height: 60px;
   }
   button:active {
     transform: scale(0.95);
