--- a/Client/src/features/MedicalRecord/css/MedicalRecordFilter.css
+++ b/Client/src/features/MedicalRecord/css/MedicalRecordFilter.css
@@ -1,6 +1,5 @@
 .medical-record-filter {
   width: fit-content;
-  min-width: 500px;
   border-radius: 20px;
   border: 0;
   background-color: #bcd9ff;
@@ -9,15 +8,31 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  max-height: 101px;
   padding: 15px;
-  row-gap: 10px;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 28.44px;
   text-align: left;
   color: #353535;
-  column-gap: 20px;
+
+  @media (max-width: 600px) {
+    width: 100%;
+    min-width: fit-content;
+    gap: 10px;
+
+    label {
+      font-size: 16px;
+      line-height: 18.96px;
+    }
+  }
+  @media (min-width: 600px) {
+    max-height: 101px;
+    column-gap: 20px;
+    min-width: 500px;
+    row-gap: 10px;
+
+    label {
+      font-size: 24px;
+      line-height: 28.44px;
+    }
+  }
 }
 
 .medical-record-filter label {
@@ -26,9 +41,7 @@
   display: flex;
   align-items: center;
   gap: 7px;
-  font-size: 24px;
   font-weight: 400;
-  line-height: 28.44px;
   color: #353535;
   text-align: left;
 }
