--- a/Client/src/features/PatientsAccount/css/SendRequest.css
+++ b/Client/src/features/PatientsAccount/css/SendRequest.css
@@ -37,6 +37,11 @@
       right: 25px;
       bottom: 25px;
     }
+    p {
+      font-size: 30px;
+      line-height: 35.55px;
+      margin-bottom: 20px;
+    }
   }
 
   .toggle-button {
@@ -48,8 +53,6 @@
     cursor: pointer;
 
     position: absolute;
-    right: 10px;
-    bottom: 10px;
   }
   .toggle-button.expanded {
     transform: rotate(180deg);
@@ -92,16 +95,6 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 21.33px;
-
-    /* @media (max-width: 600px) {
-      font-size: 18px;
-      line-height: 21.33px;
-    }
-
-    @media (min-width: 600px) {
-      line-height: 21.33px;
-      width: 100%;
-    } */
 
     label {
       display: flex;
@@ -159,10 +152,12 @@
 }
 
 .send-request.submitted {
-  margin: 0;
   background-color: #c2f3bf;
   font-family: Rubik;
   font-weight: 400;
+  p {
+    padding: 20px;
+  }
 
   @media (max-width: 600px) {
     font-size: 24px;
