--- a/Client/src/pages/FromDoctorRequests/index.css
+++ b/Client/src/pages/FromDoctorRequests/index.css
@@ -2,17 +2,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 40px;
   font-family: Rubik;
   text-align: left;
 
   @media (max-width: 600px) {
-    align-items: center;
-    width: 100%;
-    margin: 100px auto;
+    width: 90%;
+    margin: 100px 5%;
+
     h2 {
       font-size: 26px;
-      margin-left: 7.5%;
     }
     .from-doctor-requests-inner-box {
       padding: 10px;
@@ -21,6 +19,7 @@
 
   @media (min-width: 600px) {
     align-items: flex-start;
+    gap: 40px;
 
     width: 83%;
     margin: 100px 0 0 11%;
